--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,13 +12,6 @@
     <env-entry-value>/home/app_cinefiles_site/tomcat6-cinefiles-site/webapps/cinefiles/cine_img</env-entry-value>
   </env-entry>
 
-  <resource-ref>
-    <description>DB Connection</description>
-    <res-ref-name>jdbc/CinefilesMiponcaDS</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-
   <!-- Context section -->
   <context-param>
     <param-name>db</param-name>
@@ -32,7 +25,7 @@
 
   <context-param>  
     <param-name>jndiDataSource</param-name>
-    <param-value>jdbc/CinefilesMiponcaDS</param-value>
+    <param-value>jdbc/CinefilesDS</param-value>
   </context-param>
 
   <context-param>
