BAMPFA-452: Change CATALINA_HOME to CATALINA_BASE.

--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,11 @@
 				<configuration>
 					<container>
 						<containerId>tomcat6x</containerId>
-						<home>${env.CATALINA_HOME}</home>
+						<home>${env.CATALINA_BASE}</home>
 					</container>
 					<configuration>
 						<type>existing</type>
-						<home>${env.CATALINA_HOME}</home>
+						<home>${env.CATALINA_BASE}</home>
 					</configuration>
 				</configuration>
 				<executions>
