BAMPFA-452: Rename image directory variables so they make sense.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
   </context-param>
 
   <context-param>
-    <param-name>cineImgDir</param-name>
+    <param-name>docImgDir</param-name>
     <param-value>/home/app_cinefiles_site/tomcat6-cinefiles-site/webapps/cinefiles/cine_img</param-value>
   </context-param>
 
