BAMPFA-532: Change mail from address, and default to address.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 
   <context-param>
     <param-name>adminEmail</param-name>
-    <param-value>cinefiles@berkeley.edu</param-value>
+    <param-value>cinefiles@lists.berkeley.edu</param-value>
   </context-param>
 
   <!-- Distributable section -->
